uploaded-categories api and /products/counts api
